--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>alibabacloud-pkg-deployment</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.361.4</jenkins.version>
@@ -35,7 +35,7 @@
         <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <url>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin</url>
         <developerConnection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin</developerConnection>
-      <tag>alibabacloud-pkg-deployment-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
     <dependencies>
         <dependency>
